--- a/deploy/kubernetes/base/openshift-deployment.yaml
+++ b/deploy/kubernetes/base/openshift-deployment.yaml
@@ -1,19 +1,14 @@
-apiVersion: apps.openshift.io/v1
-kind: DeploymentConfig
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: litellm-proxy
   labels:
     app: litellm-proxy
 spec:
   replicas: 1
-  strategy:
-    type: Rolling
-    rollingParams:
-      updatePeriodSeconds: 1
-      intervalSeconds: 1
-      timeoutSeconds: 600
-      maxUnavailable: 25%
-      maxSurge: 25%
+  selector:
+    matchLabels:
+      app: litellm-proxy
   template:
     metadata:
       labels:
@@ -21,7 +16,7 @@ spec:
     spec:
       containers:
       - name: litellm-proxy
-        image: litellm-proxy:latest
+        image: quay.io/takinosh/litellm-proxy:latest
         ports:
         - containerPort: 4000
           protocol: TCP
@@ -51,11 +46,36 @@ spec:
           value: "1"
         - name: PORT
           value: "4000"
+        - name: MASTER_KEY
+          valueFrom:
+            secretKeyRef:
+              name: litellm-secrets
+              key: master-key
+        - name: CONFIG_PATH
+          value: "/opt/app-root/src/config/proxy_server_config.yaml"
+        volumeMounts:
+        - name: config-volume
+          mountPath: /opt/app-root/src/config
+        - name: entrypoint-volume
+          mountPath: /opt/app-root/src/docker/prod_entrypoint.sh
+          subPath: prod_entrypoint.sh
         securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
+          runAsNonRoot: true
+      serviceAccountName: litellm-proxy
+      volumes:
+      - name: config-volume
+        configMap:
+          name: litellm-config
+          defaultMode: 0644
+      - name: entrypoint-volume
+        configMap:
+          name: litellm-entrypoint
+          defaultMode: 0755
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: litellm-proxy
 ---
 apiVersion: v1
 kind: Service
